--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
+:root {
+    --first-theme-color: rgb(46, 44, 63);
+    --second-theme-color: rgb(254, 212, 213);
+}
+
+
 body {
     font-family: Helvetica, sans-serif, serif;
     margin: 0;
-    color: rgb(46, 44, 63);
-    background-color: rgb(46, 44, 63);
+    color: var(--first-theme-color);
+    background-color: var(--first-theme-color);
 }
 
 .nav-bar ul {
@@ -11,7 +17,7 @@ body {
     gap: 1%;
     padding: 3%;
     list-style-type: none;
-    background-color: rgb(46, 44, 63);
+    background-color: var(--first-theme-color);
     margin: 0;
     margin-left: 1%;
     margin-right: 1%;
@@ -20,10 +26,10 @@ body {
 }
 
 .nav-bar li {
-    background-color: rgb(254, 212, 213);
+    background-color: var(--second-theme-color);
     text-align: center;
     border-radius: 20px;
-    color: rgb(46, 44, 63);
+    color: var(--first-theme-color);
     transition: background-color 0.3s;
     font-size: 100%;
     padding: 12%;
@@ -31,10 +37,10 @@ body {
 }
 
 .nav-bar li.active {
-    background-color: rgb(46, 44, 63);
+    background-color: var(--first-theme-color);
     color: white;
     text-transform: uppercase;
-    border: 2px solid rgb(254, 212, 213);
+    border: 2px solid var(--second-theme-color);
     text-decoration: underline;
 }
 
@@ -48,14 +54,14 @@ body {
 }
 
 .nav-bar li:not(.active) a:hover {
-    background-color: rgb(46, 44, 63);
+    background-color: var(--first-theme-color);
     color: white;
     text-transform: uppercase;
     text-decoration: underline;
 }
 
 .nav-bar a:hover {
-    background-color: rgb(46, 44, 63);
+    background-color: var(--first-theme-color);
     color: white;
     text-transform: uppercase;
     text-decoration: underline;
@@ -65,7 +71,7 @@ body {
     position: absolute;
     top: -40%;
     left: 0;
-    background: rgb(46, 44, 63);
+    background: var(--first-theme-color);
     color: rgb(177, 159, 204);
     padding: 5%;
     z-index: 100;
@@ -82,7 +88,7 @@ h1 {
     text-align: center;
     padding: 3%;
     text-transform: uppercase;
-    color: rgb(254, 212, 213);
+    color: var(--second-theme-color);
 }
 
 h2 {
@@ -97,8 +103,8 @@ h3 {
     padding: 2%;
     margin-top: 3%;
     margin-bottom: 3%;
-    background-color: rgb(46, 44, 63);
-    color: rgb(254, 212, 213);
+    background-color: var(--first-theme-color);
+    color: var(--second-theme-color);
 }
 
 h4 {
@@ -113,6 +119,14 @@ p {
 
 }
 
+footer {
+    text-align: center;
+}
+
+footer p {
+    color: white;
+}
+
 .petscategory {
     min-height: 125%;
     padding: 5%;
@@ -121,7 +135,7 @@ p {
     margin-bottom: 3%;
     margin-left: 3%;
     margin-right: 3%;
-    background-color: rgb(254, 212, 213);
+    background-color: var(--second-theme-color);
 }
 
 .words {
@@ -132,7 +146,7 @@ p {
     margin-bottom: 3%;
     margin-left: 3%;
     margin-right: 3%;
-    background-color: rgb(254, 212, 213);
+    background-color: var(--second-theme-color);
 }
 
 .petscategory img {
@@ -169,14 +183,14 @@ p {
     grid-template-columns: repeat(3, 1fr);
     gap: 0;
     text-align: center;
-    border: 1px solid rgb(46, 44, 63);
+    border: 1px solid var(--first-theme-color);
 }
 
 .grid-recipeingredients li {
     display: grid;
     gap: 0;
     text-align: center;
-    border: 1px solid rgb(46, 44, 63);
+    border: 1px solid var(--first-theme-color);
     place-items: center;
 }
 
@@ -271,8 +285,8 @@ p {
         min-height: 100%;
         padding: 2%;
         border-radius: 30px;
-        border: dashed 3px rgb(254, 212, 213);
-        background-color: rgb(46, 44, 63);
+        border: dashed 3px var(--second-theme-color);
+        background-color: var(--first-theme-color);
     }
 
     .words p {
